--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/static/css/site.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarResponsive">
@@ -58,12 +58,12 @@
             <form class="form-inline" method="GET" action="/cocktail/search">
                 <div class="form-group">
                 <input type="text" name="keyword" class="form-control" placeholder="Keyword">
-                <button class="btn btn-primary" type="submit" value="search">Search</button>
+                <button class="btn btn-light" type="submit" value="search">Search</button>
             </form>
             </div>
         </div>
     </nav>
-
+    <br>
     {% block body %}
     {% endblock %}
     <br><br>
@@ -71,31 +71,31 @@
         <div class="container-fluid">
             <h5 class="footer-title"> Browse by Letter </h5>
             <div id="alphabet" name="letter">
-                <a href="/browse/A">A</a>|
-                <a href="/browse/B">B</a>|
-                <a href="/browse/C">C</a>|
-                <a href="/browse/D">D</a>|
-                <a href="/browse/E">E</a>|
-                <a href="/browse/F">F</a>|
-                <a href="/browse/G">G</a>|
-                <a href="/browse/H">H</a>|
-                <a href="/browse/I">I</a>|
-                <a href="/browse/J">J</a>|
-                <a href="/browse/K">K</a>|
-                <a href="/browse/L">L</a>|
-                <a href="/browse/M">M</a>|
-                <a href="/browse/N">N</a>|
-                <a href="/browse/O">O</a>|
-                <a href="/browse/P">P</a>|
-                <a href="/browse/Q">Q</a>|
-                <a href="/browse/R">R</a>|
-                <a href="/browse/S">S</a>|
-                <a href="/browse/T">T</a>|
-                <a href="/browse/U">U</a>|
-                <a href="/browse/V">V</a>|
-                <a href="/browse/W">W</a>|
-                <a href="/browse/X">X</a>|
-                <a href="/browse/Y">Y</a>|
+                <a href="/browse/A">A</a> |
+                <a href="/browse/B">B</a> |
+                <a href="/browse/C">C</a> |
+                <a href="/browse/D">D</a> |
+                <a href="/browse/E">E</a> |
+                <a href="/browse/F">F</a> |
+                <a href="/browse/G">G</a> |
+                <a href="/browse/H">H</a> |
+                <a href="/browse/I">I</a> |
+                <a href="/browse/J">J</a> |
+                <a href="/browse/K">K</a> |
+                <a href="/browse/L">L</a> |
+                <a href="/browse/M">M</a> |
+                <a href="/browse/N">N</a> |
+                <a href="/browse/O">O</a> |
+                <a href="/browse/P">P</a> |
+                <a href="/browse/Q">Q</a> |
+                <a href="/browse/R">R</a> |
+                <a href="/browse/S">S</a> |
+                <a href="/browse/T">T</a> |
+                <a href="/browse/U">U</a> |
+                <a href="/browse/V">V</a> |
+                <a href="/browse/W">W</a> |
+                <a href="/browse/X">X</a> |
+                <a href="/browse/Y">Y</a> |
                 <a href="/browse/Z">Z</a>
             </div>
         </div>
