--- a/templates/register.html
+++ b/templates/register.html
@@ -3,14 +3,40 @@
 {% block title %} Register {% endblock %}
 
 {% block body %}
-
-    <form action="/handle_registration_form" method="POST">
+    <form action="/handle_registration_form" method="POST" class="form-register">
+        <div class="form-group">
+            <label for="inputEmail">Email Address</label>
+            <input type="text" class="form-control" name="email" placeholder="Email Address">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputFirst">First Name</label>
+                <input type="text" class="form-control" name="fname" placeholder="First Name">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="inputLast">Last Name</label>
+                <input type="text" class="form-control" name="lname" placeholder="Last Name">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputUsername">Username</label>
+                <input type="text" class="form-control" name="username" placeholder="Username">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="inputPassword">Password</label>
+                <input type="password" class="form-control" name="password" placeholder="Password">
+            </div>
+        </div>
+        <button type="submit" class="btn-lg btn-outline-dark btn-block">Sign Up</button>
+    </form>
+<!--     <form action="/handle_registration_form" method="POST">
         First Name: <input type="text" name="fname">
         Last Name: <input type="text" name="lname">
         Email: <input type="text" name="email">
         Username: <input type="text" name="username">
         Password: <input type="password" name="password">
         <input type="submit">
-    </form>
+    </form> -->
 
 {% endblock %}
