--- a/templates/cocktail-details.html
+++ b/templates/cocktail-details.html
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="container-fluid padding">
         <div class="row">
-            <h5> {{ name }} </h5>
+            <h5 class="cocktail-title"> {{ name }} </h5>
         </div>
         <div class="row">
             <div class="col-5">
