--- a/templates/my-profile.html
+++ b/templates/my-profile.html
@@ -5,7 +5,7 @@
 {% block body %}
     <h1 class="display-8">Hi {{ user.fname }}, welcome to your profile!</h1>
 
-    <form class="form-inline" action="/create_new_event" method="POST">
+    <form class="form-inline" action="/create_new_event" method="POST" autocomplete="off">
         <div class="form-group">
             <input type="text" name="name" class="form-control" placeholder="Create New Event">
             <button class="btn btn-outline-dark" type="submit">Submit</button>
