--- a/static/css/site.css
+++ b/static/css/site.css
@@ -77,6 +77,7 @@ body {
 }
 
 .footer {
+  color: rgba(255,255,255,.5);
   padding: 10px;
   margin: 0;
   position: relative;
@@ -85,7 +86,7 @@ body {
   width: 100%;
   height: 80px;
   line-height: auto;
-  background-color: #f5f5f5;
+  background-color: #212529;
 }
 
 .footer-title {
@@ -114,4 +115,14 @@ h1 {
 .form-inline {
   float: right;
   margin-right: 30px;
+}
+
+.navbar-brand {
+  text-align: left;
+  margin-top: 5px
+}
+
+.cocktail-title {
+  margin-left: 20px;
+  font-size: 30px
 }
