--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,12 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
+            <a class="navbar-brand" href="/"><h3>Cocktail Party</h3></a>
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarResponsive">
                 <span class="navbar-toggle-icon"></span>
-            </button>
-            <div class="navbar-toggle-icon" id="navbarResponsive">
+            </button> -->
+<!--             <div class="navbar-toggle-icon" id="navbarResponsive"> -->
                 {% with messages = get_flashed_messages() %}
                     {% if messages %}
                         {% for message in messages %}
@@ -28,16 +29,16 @@
                         {% endfor %}
                     {% endif %}
                 {% endwith %}
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item" active>
                         <a class="nav-link" href="/"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/popular_liquor_types"> Popular Liquor Types </a>
+                        <a class="nav-link" href="/popular_liquor_types"> Liquor Types </a>
                     </li>
                     {% if session %}
                         <li class="nav-item">
-                            <a class="nav-link" href="/recommended_cocktails"> Recommended Cocktails </a>
+                            <a class="nav-link" href="/recommended_cocktails"> Recommended </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/my_profile"> My Profile </a>
@@ -54,13 +55,13 @@
                         </li>
                     {% endif %}
                 </ul>
-            </div>
-            <form class="form-inline" method="GET" action="/cocktail/search">
+            <!-- </div> -->
+            <form class="form-inline" method="GET" action="/cocktail/search" autocomplete="off">
                 <div class="form-group">
                 <input type="text" name="keyword" class="form-control" placeholder="Keyword">
                 <button class="btn btn-light" type="submit" value="search">Search</button>
             </form>
-            </div>
+            <!-- </div> -->
         </div>
     </nav>
     <br>
