--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1,37 +1,3 @@
-/*figure {
-    border-radius: 3px;
-    border: 3px solid black;
-    width: 20em;
-    height: 23em;
-    margin: 2em;
-    padding: 1em;
-}
-
-figure img {
-    vertical-align: top;
-}
-
-body {
-    background: url(../images/cocktail_lounge.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-div#login-logout {
-    
-}
-
-.cocktail-party {
-    text-align: center;
-    background: url(../images/cocktail_bar.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}*/
-
 head {
     font-family: 'Poppins', sans-serif;
 }
@@ -109,7 +75,7 @@ body {
 
 h1 {
   text-align: left;
-  text-indent: 20px
+  text-indent: 20px;
 }
 
 .form-inline {
@@ -119,10 +85,15 @@ h1 {
 
 .navbar-brand {
   text-align: left;
-  margin-top: 5px
+  margin-top: 5px;
 }
 
 .cocktail-title {
   margin-left: 20px;
-  font-size: 30px
+  font-size: 30px;
+}
+
+h6 {
+    text-align: left;
+    text-indent: 20px;
 }
