--- a/templates/base.html
+++ b/templates/base.html
@@ -22,13 +22,6 @@
                 <span class="navbar-toggle-icon"></span>
             </button> -->
 <!--             <div class="navbar-toggle-icon" id="navbarResponsive"> -->
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for message in messages %}
-                            {{ message }}
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
                 <ul class="navbar-nav">
                     <li class="nav-item" active>
                         <a class="nav-link" href="/"> Home </a>
@@ -65,9 +58,18 @@
         </div>
     </nav>
     <br>
-    {% block body %}
-    {% endblock %}
-    <br><br>
+    <div class='flash'>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <h6> {{ message }} </h6>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        {% block body %}
+        {% endblock %}
+    </div>
+    <br><br><br><br>
     <footer class="footer fixed-bottom">
         <div class="container-fluid">
             <h5 class="footer-title"> Browse by Letter </h5>
