--- a/static/css/site.css
+++ b/static/css/site.css
@@ -50,7 +50,7 @@ body {
   text-align: center;
   bottom: 0;
   width: 100%;
-  height: 80px;
+  height: 115px;
   line-height: auto;
   background-color: #212529;
 }
@@ -73,7 +73,14 @@ body {
   border-radius: 8px;
 }
 
+.img-thumbnail {
+  border: 0;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+
 h1 {
+  font-size: 35px;
   text-align: left;
   text-indent: 20px;
 }
@@ -86,6 +93,10 @@ h1 {
 .navbar-brand {
   text-align: left;
   margin-top: 5px;
+}
+
+.logo {
+  width: 450px;
 }
 
 .cocktail-title {
