--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><h3>Cocktail Party</h3></a>
+            <a class="navbar-brand" href="/"><img src="/static/images/logo.jpg" class="logo"></a>
+            <!-- <h3>Cocktail Party</h3> -->
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarResponsive">
                 <span class="navbar-toggle-icon"></span>
@@ -66,9 +67,9 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-        {% block body %}
-        {% endblock %}
     </div>
+    {% block body %}
+    {% endblock %}
     <br><br><br><br>
     <footer class="footer fixed-bottom">
         <div class="container-fluid">
