--- a/templates/cocktail-details.html
+++ b/templates/cocktail-details.html
@@ -11,10 +11,10 @@
             <div class="col-5">
                 <img class="img-thumbnail" src="{{ url }}">
             </div>
-            <div class="col-7">
+            <div class="col-7" style="padding-top: 20px">
                 {% for ingredient in ingredients %}
-                <div class="card d-inline-block" style="max-width: 8rem; margin-left: 20px; margin-right: 20px; margin-bottom: 15px">
-                    <img class="card-img-top" src="{{ ingredient['img_url'] }}">
+                <div class="card d-inline-block" style="max-width: 12rem;margin-left: 20px; margin-right: 20px; margin-bottom: 15px; text-align: center">
+                    <img src="{{ ingredient['img_url'] }}" style="max-width: 8rem; margin-left: 20px; margin-right: 20px; margin-bottom: 15px">
                     <p class="card-text">{{ ingredient['measurement'] }} {{ ingredient['name'] }} </p>
                 </div>
                 {% endfor %}
@@ -27,39 +27,9 @@
                     {% endfor %}
                     </select>
                     <input type="hidden" name="cocktail_id" value= {{cocktail_id}}>
-                    <input type="submit" class="form-control btn btn-primary">
+                    <input type="submit" class="form-control btn btn-outline-dark">
                 </form>
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-<!--         <p> {{ name }} </p>
-        <img src="{{ url }}"> -->
-<!--         {{ instructions }}
-        {% for ingredient in ingredients %}
-            {{ ingredient['measurement'] }}
-            {{ ingredient['name'] }}
-            <img src="{{ ingredient['img_url'] }}">
-        {% endfor %}
-    </div>
-    <div>
-        <form action='/handle_event_form' method="POST">
-            <select name="events">
-            {% for event in events %}
-                <option value={{event.event_id}}> {{ event.name }}</option>
-            {% endfor %}
-            </select>
-            <input type="hidden" name="cocktail_id" value= {{cocktail_id}}>
-            <input type="submit">
-        </form>
-    </div> -->
-                    
-
 {% endblock %}
