--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/site.css">
-    <link rel="icon" type="image/png" href="/static/image/favicon.png">
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
@@ -96,12 +96,11 @@
                 <a href="/browse/R">R</a> |
                 <a href="/browse/S">S</a> |
                 <a href="/browse/T">T</a> |
-                <a href="/browse/U">U</a> |
                 <a href="/browse/V">V</a> |
                 <a href="/browse/W">W</a> |
-                <a href="/browse/X">X</a> |
                 <a href="/browse/Y">Y</a> |
-                <a href="/browse/Z">Z</a>
+                <a href="/browse/Z">Z</a> |
+                <a href="/browse/number">#</a>
             </div>
         </div>
     </footer>
